bk_ida/gccida/g3/expand_expr_stmt_value
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_expr_stmt_value/src/stmt.c:2682:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_expr_stmt_value/src/stmt.c:2735:17: error: use of undeclared identifier 'label'
( const char *)&label.block.vars + 2); 
                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_expr_stmt_value/src/stmt.c:2756:1: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
( __m128i)( unsigned __int64)type, 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_expr_stmt_value/src/stmt.c:2757:1: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
( __m128i)( unsigned __int64)v7); 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_expr_stmt_value/src/obj/stmt.o] Error 1
